package ImageHoster;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ImageHosterApplication {

  public static void main(String[] args) {
    SpringApplication.run(ImageHosterApplication.class, args);
  }
}
