package ImageHoster.repository;

import ImageHoster.model.Comment;

public interface CommentRepository {

	void addComment(Comment comment);

}