@startuml

title __IMAGEHOSTER's Class Diagram__\n

  namespace ImageHoster {
    class ImageHoster.ImageHosterApplication {
    }
  }
  

  namespace ImageHoster {
    namespace config {
      class ImageHoster.config.JpaConfig {
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.CommentController {
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.HomeController {
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.ImageController {
      }
    }
  }
  

  namespace ImageHoster {
    namespace controller {
      class ImageHoster.controller.UserController {
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Comment {
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Image {
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Tag {
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.User {
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.UserProfile {
      }
    }
  }
  

  namespace ImageHoster {
    namespace repository {
      class ImageHoster.repository.CommentRepository {
      }
    }
  }
  

  namespace ImageHoster {
    namespace repository {
      class ImageHoster.repository.ImageRepository {
      }
    }
  }
  

  namespace ImageHoster {
    namespace repository {
      class ImageHoster.repository.TagRepository {
      }
    }
  }
  

  namespace ImageHoster {
    namespace repository {
      class ImageHoster.repository.UserRepository {
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.CommentService {
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.ImageService {
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.TagService {
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.UserService {
      }
    }
  }
  

  ImageHoster.controller.CommentController o-- ImageHoster.service.CommentService : commentService
  ImageHoster.controller.CommentController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.HomeController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.ImageController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.ImageController o-- ImageHoster.service.TagService : tagService
  ImageHoster.controller.UserController o-- ImageHoster.service.ImageService : imageService
  ImageHoster.controller.UserController o-- ImageHoster.service.UserService : userService
  ImageHoster.model.Comment o-- ImageHoster.model.Image : image
  ImageHoster.model.Comment o-- ImageHoster.model.User : user
  ImageHoster.model.Image o-- ImageHoster.model.User : user
  ImageHoster.model.User o-- ImageHoster.model.UserProfile : profile
  ImageHoster.service.CommentService o-- ImageHoster.repository.CommentRepository : commentRepository
  ImageHoster.service.ImageService o-- ImageHoster.repository.ImageRepository : imageRepository
  ImageHoster.service.TagService o-- ImageHoster.repository.TagRepository : tagRepository
  ImageHoster.service.UserService o-- ImageHoster.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
